10-10 дома доделал мобилку оптимизировал, добавил анимацию сжал картинки

--- a/css/source/_media.scss
+++ b/css/source/_media.scss
@@ -20,6 +20,21 @@ $desktop-width: 1440px;
   }
 }
 
+.hidden-xs {
+
+  @include mobile {
+    display: none !important;
+  }
+}
+
+.visible-xs {
+  display: none !important;
+
+  @include mobile {
+    display: block !important;
+  }
+}
+
 //$small-mobile-width: 580px;
 //$mobile-width: 900px;
 //$mobile-height: 660px;
