--- a/css/source/base/_base.scss
+++ b/css/source/base/_base.scss
@@ -13,6 +13,10 @@ html {
 	min-height: 100% !important;
 	position: relative;
 	overflow-x: auto !important;
+
+	@include mobile{
+		min-width: 620px;
+	}
 }
 
 body {
@@ -21,6 +25,10 @@ body {
 	max-width: 100%;
 	position: relative;
 	overflow: hidden;
+
+	@include mobile{
+		min-width: 620px;
+	}
 }
 
 //====================global container
@@ -28,6 +36,10 @@ body {
 	overflow: hidden;
 	min-width: 1248px;
 	position: relative;
+
+	@include mobile{
+		min-width: 620px;
+	}
 }
 
 //====================container
@@ -39,6 +51,10 @@ body {
 	position: relative;
 	z-index: 10;
 
+	@include mobile{
+		width: 620px;
+		padding: 0 20px;
+	}
 }
 
 .big-container{
@@ -51,6 +67,11 @@ body {
 
 	@include small-desktop{
 		width: 1290px;
+	}
+
+	@include mobile{
+		width: 580px;
+		padding: 0 20px;
 	}
 
 }
