--- a/css/source/layout/_header.scss
+++ b/css/source/layout/_header.scss
@@ -11,9 +11,6 @@
 
 	}
 
-	.si-phone {
-		padding-top: 0px;
-	}
 }
 
 .logo {
@@ -39,6 +36,11 @@
 	margin-top: 24px;
 	margin-left: 4px;
 
+	@include mobile{
+		display: none !important;
+	}
+
+
 	.lang{
 		background: #0F5EBA !important;
 	}
@@ -56,6 +58,11 @@
 	float: right !important;
 	margin-right: 18px;
 
+	@include mobile{
+		width: 100%;
+		margin-right: 0;
+	}
+
 
 	.phone-link {
 		display: inline-block;
@@ -66,6 +73,7 @@
 		color: #34404D;
 		vertical-align: top;
 		margin-top: 7px;
+
 
 		span{
 			color: #788AA1;
@@ -84,6 +92,10 @@
 			background: url("../svg/phone.svg") no-repeat;
 			-webkit-background-size: cover;
 			background-size: cover;
+
+			@include mobile{
+				display: none;
+			}
 		}
 	}
 
@@ -107,6 +119,10 @@
 	margin-top: 3px;
 	margin-right: 15px;
 
+	@include mobile{
+		display: none;
+	}
+
 	.wrapper{
 		width: 100%;
 		display: flex;
@@ -122,5 +138,9 @@
 	a {
 		color: #788A !important;
 		font: 14px/72px 'Proba';
+		
+		&:hover{
+			text-decoration: underline;
+		}
 	}
 }
