--- a/css/source/_grid.scss
+++ b/css/source/_grid.scss
@@ -163,6 +163,10 @@ $pad: 10px;
 	.col-xs-1-3 {
 	  width: 33.33%;
 	}
+
+	.col-xs-2-3 {
+		width: 66.66%;
+	}
   
 	.col-xs-1-4 {
 	  width: 25.00%;
