--- a/css/source/base/_inputs.scss
+++ b/css/source/base/_inputs.scss
@@ -124,7 +124,7 @@ textarea {
 .checkbox-label {
 	display: block;
 	text-align: left;
-	padding-left: 24px;
+	//padding-left: 24px;
 	position: relative !important;
 }
 
@@ -196,12 +196,19 @@ textarea {
 	display: inline-block !important;
 	width: 100% !important;
 	background: #0F5EBA !important;
+	cursor: pointer;
+
+	ul{
+		padding-left: 0;
+		margin-top: 0;
+	}
 
 	li {
 		@include general-transition;
 		color: #fff !important;
 		background: #e5e5e5 !important;
 		height: 30px;
+		padding-left: 16px;
 
 		&:hover,
 		&:active,
@@ -235,7 +242,7 @@ textarea {
 .jq-selectbox__trigger {
 	@include abs-center;
 	left: auto;
-	top: 3px;
+	top: 0;
 	right: 10px;
 	width: 10px;
 	height: 6px;
