--- a/css/source/layout/_footer.scss
+++ b/css/source/layout/_footer.scss
@@ -2,6 +2,10 @@
 .layout-footer {
 	padding: 24px 0 30px;
 
+	@include mobile{
+		padding: 57px 0 58px;
+	}
+
 	.logo {
 		width: 134px;
 		display: block;
@@ -20,6 +24,10 @@
 		color: #788AA1;
 		font: normal 16px/25px 'Proba';
 		margin-top: 5px;
+
+		@include mobile{
+			margin-top: 15px;
+		}
 	}
 
 	.si-phone {
@@ -28,6 +36,10 @@
 		vertical-align: top;
 		margin-top: 12px;
 		float: right !important;
+
+		@include mobile{
+			margin-top: 5px;
+		}
 
 
 		.phone-link {
@@ -40,11 +52,21 @@
 			vertical-align: top;
 			margin-top: 10px;
 
+			@include mobile{
+				width: 255px;
+				margin-bottom: 15px;
+				font: bold 30px/30px 'Proba';
+			}
+
 			span{
 				color: #788AA1;
 				font: 12px/12px 'Proba';
 				vertical-align: top;
 				margin-right: 9px;
+
+				@include mobile{
+					font: 16px/16px 'Proba';
+				}
 			}
 
 			&:after{
@@ -57,6 +79,10 @@
 				background: url("../svg/phone.svg") no-repeat;
 				-webkit-background-size: cover;
 				background-size: cover;
+
+				@include mobile{
+					display: block !important;
+				}
 			}
 		}
 
@@ -79,6 +105,10 @@
 		text-align: right;
 		color: #788AA1;
 		font: normal 16px/25px 'Proba';
+
+		@include mobile{
+			margin-top: 20px;
+		}
 
 		.link{
 			text-decoration: underline;
